# et-scrapper

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  examples.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
et_scrapper/: __init__.py  constants.py  models.py
et_scrapper/scrapers/: __init__.py  article.py  homepage.py  topic.py
et_scrapper/utils/: http.py
